--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <p><b>Height:</b> 20cm</p>
     <br>
 	
-	
+    <h2>African_Capybara</h2>
+    <img width=350px src="Capybara.jpg">
+    <p><b>Area:</b> Russia, Noyabrsk</p>
+    <p><b>Weight:</b> 1kg</p>
+    <p><b>Height:</b> 20cm</p>
+    <br>
 
   </body>
 </html>
